--- a/scss/components/_clicky.scss
+++ b/scss/components/_clicky.scss
@@ -17,7 +17,6 @@
 .zotero-clicky-minus, .zotero-clicky-plus {
 	margin: 0;
 	width: 20px;
-	height: 20px;
 	border-radius: 2px;
 	color: var(--fill-secondary);
 	
